Update organization key in sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 # Required metadata
 # Replace 'your_project_key' and 'your_organization_key' with the actual keys from your SonarCloud/SonarQube account.
 sonar.projectKey=wasimbaari_example-voting-app
-sonar.organization=wasim_baari-github
+sonar.organization=wasimbaari
 
 # The URL of your SonarQube server. If using SonarCloud, keep this as is.
 sonar.host.url=https://sonarcloud.io
